--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-import": "^2.25.0",
     "openapi-typescript": "^7.3.0",
     "postcss": "^8.4.41",
+    "sass-embedded": "^1.78.0",
     "tailwindcss": "^3.4.10",
     "ts-node": "^10.0.0",
     "typescript": "^5.5.4",
@@ -55,15 +56,19 @@
     "@headlessui/react": "^2.1.3",
     "@hookform/resolvers": "^3.9.0",
     "@lexical/react": "^0.17.1",
+    "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@stepperize/react": "^3.0.1",
     "@tanstack/query-sync-storage-persister": "^5.54.1",
@@ -85,10 +90,12 @@
     "hono": "^4.5.9",
     "http-proxy-middleware": "^3.0.0",
     "immer": "^10.1.1",
+    "javascript-playgrounds": "^1.2.5",
     "langchain": "^0.2.18",
     "lexical": "^0.17.1",
     "lucide-react": "^0.436.0",
     "marked-react": "^2.0.0",
+    "monaco-editor": "^0.51.0",
     "next-themes": "^0.3.0",
     "openapi-fetch": "^0.11.1",
     "pg": "^8.12.0",
