--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
     "openapi-typescript": "^7.3.0",
-    "postcss": "^8.4.41",
+    "postcss": "^8.4.47",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "sass-embedded": "^1.78.0",
     "tailwindcss": "^3.4.10",
     "ts-node": "^10.0.0",
@@ -56,6 +58,14 @@
     "@headlessui/react": "^2.1.3",
     "@hookform/resolvers": "^3.9.0",
     "@lexical/react": "^0.17.1",
+    "@mantine/charts": "^7.13.3",
+    "@mantine/core": "^7.13.3",
+    "@mantine/dates": "^7.13.3",
+    "@mantine/form": "^7.13.3",
+    "@mantine/hooks": "^7.13.3",
+    "@mantine/modals": "^7.13.3",
+    "@mantine/notifications": "^7.13.3",
+    "@mantine/tiptap": "^7.13.3",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
@@ -70,17 +80,23 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@react-querybuilder/mantine": "^7.7.1",
     "@stepperize/react": "^3.0.1",
     "@tanstack/query-sync-storage-persister": "^5.54.1",
     "@tanstack/react-query": "^5.52.2",
     "@tanstack/react-query-persist-client": "^5.55.0",
     "@tanstack/react-router": "^1.51.2",
+    "@tiptap/extension-link": "^2.9.1",
+    "@tiptap/pm": "^2.9.1",
+    "@tiptap/react": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
     "@types/better-sqlite3": "^7.6.11",
     "@types/pg": "^8.11.8",
     "@uidotdev/usehooks": "^2.4.1",
     "better-sqlite3": "^11.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "deep-object-diff": "^1.1.9",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
@@ -108,6 +124,7 @@
     "react-plotly.js": "^2.6.0",
     "react-querybuilder": "^7.6.1",
     "react-resizable-panels": "^2.1.2",
+    "recharts": "^2.13.0",
     "sonner": "^1.5.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.2",
