--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": ".vite/build/main.js",
   "scripts": {
     "start": "electron-forge start",
+    "db:push": "rm -rf drizzle/meta && rm drizzle/*.sql sqlite.db && drizzle-kit generate",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -57,15 +58,21 @@
   "dependencies": {
     "@headlessui/react": "^2.1.3",
     "@hookform/resolvers": "^3.9.0",
+    "@langchain/core": "^0.3.19",
     "@lexical/react": "^0.17.1",
-    "@mantine/charts": "^7.13.3",
-    "@mantine/core": "^7.13.3",
-    "@mantine/dates": "^7.13.3",
-    "@mantine/form": "^7.13.3",
-    "@mantine/hooks": "^7.13.3",
-    "@mantine/modals": "^7.13.3",
-    "@mantine/notifications": "^7.13.3",
-    "@mantine/tiptap": "^7.13.3",
+    "@mantine/carousel": "^7.13.5",
+    "@mantine/charts": "^7.13.5",
+    "@mantine/code-highlight": "^7.13.5",
+    "@mantine/core": "^7.13.5",
+    "@mantine/dates": "^7.13.5",
+    "@mantine/dropzone": "^7.13.5",
+    "@mantine/form": "^7.13.5",
+    "@mantine/hooks": "^7.13.5",
+    "@mantine/modals": "^7.13.5",
+    "@mantine/notifications": "^7.13.5",
+    "@mantine/nprogress": "^7.13.5",
+    "@mantine/spotlight": "^7.13.5",
+    "@mantine/tiptap": "^7.13.5",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
@@ -91,8 +98,10 @@
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
     "@types/better-sqlite3": "^7.6.11",
+    "@types/json-logic-js": "^2.0.8",
     "@types/pg": "^8.11.8",
     "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.7.7",
     "better-sqlite3": "^11.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -100,18 +109,22 @@
     "deep-object-diff": "^1.1.9",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
+    "electron-settings": "^4.0.4",
     "electron-squirrel-startup": "^1.0.1",
+    "embla-carousel-react": "^7.1.0",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "hono": "^4.5.9",
     "http-proxy-middleware": "^3.0.0",
     "immer": "^10.1.1",
     "javascript-playgrounds": "^1.2.5",
-    "langchain": "^0.2.18",
+    "json-logic-js": "^2.0.5",
+    "langchain": "^0.3.6",
     "lexical": "^0.17.1",
     "lucide-react": "^0.436.0",
     "marked-react": "^2.0.0",
     "monaco-editor": "^0.51.0",
+    "motion": "^11.12.0",
     "next-themes": "^0.3.0",
     "openapi-fetch": "^0.11.1",
     "pg": "^8.12.0",
@@ -124,10 +137,11 @@
     "react-plotly.js": "^2.6.0",
     "react-querybuilder": "^7.6.1",
     "react-resizable-panels": "^2.1.2",
-    "recharts": "^2.13.0",
+    "recharts": "2",
     "sonner": "^1.5.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.2",
+    "tailwind-preset-mantine": "^1.3.0",
     "tailwindcss-animate": "^1.0.7",
     "use-keyboard-shortcut": "^1.1.6",
     "usehooks-ts": "^3.1.0",
