publication search, derived fields, db restructure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,12 @@ services:
     container_name: searxng
     image: docker.io/searxng/searxng:latest
     restart: unless-stopped
+    environment:
+      - FORMATS=html,json
     networks:
       - web
     volumes:
       - ./searxng-data:/etc/searxng:rw
-    # environment:
-    #   - SEARXNG_BASE_URL=https://search.specht.io
-    #   - SEARXNG_URL=https://search.specht.io
 networks:
   web:
     external: true
