--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "clinical-trials-explorer",
-  "productName": "clinical-trials-explorer",
+  "productName": "Clinical Trials Explorer",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "App to download, explore, annotate and analyze clinical trials",
   "main": ".vite/build/main.js",
   "scripts": {
     "start": "electron-forge start",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
     "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-dmg": "^7.6.0",
     "@electron-forge/maker-rpm": "^7.4.0",
     "@electron-forge/maker-squirrel": "^7.4.0",
     "@electron-forge/maker-zip": "^7.4.0",
@@ -52,12 +53,14 @@
   "keywords": [],
   "author": {
     "name": "Tim Specht",
-    "email": "t.specht@dres-specht.de"
+    "email": "mail@tim-specht.com"
   },
   "license": "MIT",
   "dependencies": {
+    "@electron/packager": "^18.3.6",
     "@headlessui/react": "^2.1.3",
     "@hookform/resolvers": "^3.9.0",
+    "@langchain/anthropic": "^0.3.8",
     "@langchain/core": "^0.3.19",
     "@lexical/react": "^0.17.1",
     "@mantine/carousel": "^7.13.5",
@@ -73,7 +76,6 @@
     "@mantine/nprogress": "^7.13.5",
     "@mantine/spotlight": "^7.13.5",
     "@mantine/tiptap": "^7.13.5",
-    "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -123,7 +125,6 @@
     "lexical": "^0.17.1",
     "lucide-react": "^0.436.0",
     "marked-react": "^2.0.0",
-    "monaco-editor": "^0.51.0",
     "motion": "^11.12.0",
     "next-themes": "^0.3.0",
     "openapi-fetch": "^0.11.1",
