--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "electron-settings": "^4.0.4",
     "electron-squirrel-startup": "^1.0.1",
     "embla-carousel-react": "^7.1.0",
+    "export-to-csv": "^1.4.0",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "hono": "^4.5.9",
