--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@electron-forge/publisher-github": "^7.6.0",
     "@electron/fuses": "^1.8.0",
     "@tailwindcss/typography": "^0.5.15",
-    "@tanstack/router-devtools": "^1.51.2",
+    "@tanstack/router-devtools": "^1.85.4",
     "@tanstack/router-plugin": "^1.85.3",
     "@types/express": "^4.17.21",
     "@types/react": "^18.3.4",
@@ -37,7 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "autoprefixer": "^10.4.20",
-    "drizzle-kit": "^0.24.2",
+    "drizzle-kit": "^0.29.0",
     "electron": "32.0.1",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
@@ -59,6 +59,7 @@
   "license": "MIT",
   "dependencies": {
     "@electron/packager": "^18.3.6",
+    "@electron/rebuild": "^3.7.1",
     "@headlessui/react": "^2.1.3",
     "@hookform/resolvers": "^3.9.0",
     "@langchain/anthropic": "^0.3.8",
@@ -95,7 +96,7 @@
     "@tanstack/query-sync-storage-persister": "^5.54.1",
     "@tanstack/react-query": "^5.52.2",
     "@tanstack/react-query-persist-client": "^5.55.0",
-    "@tanstack/react-router": "^1.51.2",
+    "@tanstack/react-router": "^1.85.4",
     "@tiptap/extension-link": "^2.9.1",
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
@@ -111,7 +112,7 @@
     "dayjs": "^1.11.13",
     "deep-object-diff": "^1.1.9",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.33.0",
+    "drizzle-orm": "^0.37.0",
     "drizzle-zod": "^0.5.1",
     "electron-settings": "^4.0.4",
     "electron-squirrel-startup": "^1.0.1",
