--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "db:studio": "drizzle-kit studio"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^7.6.0",
-    "@electron-forge/maker-deb": "^7.6.0",
-    "@electron-forge/maker-dmg": "^7.6.0",
-    "@electron-forge/maker-rpm": "^7.6.0",
-    "@electron-forge/maker-squirrel": "^7.6.0",
-    "@electron-forge/maker-zip": "^7.6.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.6.0",
-    "@electron-forge/plugin-fuses": "^7.6.0",
-    "@electron-forge/plugin-vite": "^7.6.0",
-    "@electron-forge/publisher-github": "^7.6.0",
+    "@electron-forge/cli": "~7.4.0",
+    "@electron-forge/maker-deb": "~7.4.0",
+    "@electron-forge/maker-dmg": "~7.4.0",
+    "@electron-forge/maker-rpm": "~7.4.0",
+    "@electron-forge/maker-squirrel": "~7.4.0",
+    "@electron-forge/maker-zip": "~7.4.0",
+    "@electron-forge/plugin-auto-unpack-natives": "~7.4.0",
+    "@electron-forge/plugin-fuses": "~7.4.0",
+    "@electron-forge/plugin-vite": "~7.4.0",
+    "@electron-forge/publisher-github": "~7.4.0",
     "@electron/fuses": "^1.8.0",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/router-devtools": "^1.85.4",
@@ -49,7 +49,8 @@
     "tailwindcss": "^3.4.10",
     "ts-node": "^10.0.0",
     "typescript": "^5.5.4",
-    "vite": "^5.0.12"
+    "vite": "^5.0.12",
+    "@electron/packager": "^18.3.6"
   },
   "keywords": [],
   "author": {
@@ -58,8 +59,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@electron/packager": "^18.3.6",
-    "@electron/rebuild": "^3.7.1",
     "@headlessui/react": "^2.1.3",
     "@hookform/resolvers": "^3.9.0",
     "@langchain/anthropic": "^0.3.8",
@@ -123,7 +122,6 @@
     "hono": "^4.5.9",
     "http-proxy-middleware": "^3.0.0",
     "immer": "^10.1.1",
-    "javascript-playgrounds": "^1.2.5",
     "json-logic-js": "^2.0.5",
     "langchain": "^0.3.6",
     "lexical": "^0.17.1",
