added specific publish scripts

--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
+    "publish:win-x64": "electron-forge publish --platform=win32 -a x64",
+    "publish:win-arm": "electron-forge publish --platform=win32 -a arm64",
+    "publish:win": "npm run publish:win-x64 && npm run publish:win-arm",
+    "publish:mac-x64": "electron-forge publish --platform=darwin -a x64",
+    "publish:mac-arm": "electron-forge publish --platform=darwin -a arm64",
+    "publish:mac": "npm run publish:mac-x64 && npm run publish:mac-arm",
     "lint": "eslint --ext .ts,.tsx .",
     "generate-api-schema": "openapi-typescript https://clinicaltrials.gov/api/oas/v2 -o ./src/types/api-schema.d.ts",
     "drizzle:generate": "drizzle-kit generate",
