--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "clinical-trials-explorer",
   "productName": "Clinical Trials Explorer",
-  "version": "1.2.0",
+  "version": "1.2.1",
+  "repository": "https://github.com/T-Specht/clinical-trials-explorer/",
   "description": "App to download, explore, annotate and analyze clinical trials",
   "main": ".vite/build/main.js",
   "scripts": {
@@ -153,6 +154,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwind-preset-mantine": "^1.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "update-electron-app": "^3.0.0",
     "use-keyboard-shortcut": "^1.1.6",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8",
