added textarea fields, experimental graphs

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@react-querybuilder/mantine": "^7.7.1",
+    "@react-sigma/core": "^4.0.3",
     "@stepperize/react": "^3.0.1",
     "@tanstack/query-sync-storage-persister": "^5.54.1",
     "@tanstack/react-query": "^5.52.2",
@@ -126,6 +127,10 @@
     "embla-carousel-react": "^7.1.0",
     "export-to-csv": "^1.4.0",
     "express": "^4.19.2",
+    "graphology": "^0.25.4",
+    "graphology-layout": "^0.6.1",
+    "graphology-layout-forceatlas2": "^0.10.1",
+    "graphology-types": "^0.24.8",
     "helmet": "^7.1.0",
     "hono": "^4.5.9",
     "http-proxy-middleware": "^3.0.0",
@@ -138,7 +143,6 @@
     "motion": "^11.12.0",
     "next-themes": "^0.3.0",
     "openapi-fetch": "^0.11.1",
-    "pg": "^8.12.0",
     "plotly.js": "^2.35.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -149,6 +153,7 @@
     "react-querybuilder": "^7.6.1",
     "react-resizable-panels": "^2.1.2",
     "recharts": "2",
+    "sigma": "^3.0.0-beta.39",
     "sonner": "^1.5.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.2",
